- コードをリファクタリング。 - レポートファイルをツイート用と詳細用の2パターン出力するように変更。 - 一部の設定をコンフィグファイルから設定できるように変更。

--- a/EarliestFuhaRanking/Config(Template).json
+++ b/EarliestFuhaRanking/Config(Template).json
@@ -4,5 +4,9 @@
     "ApiSecretKey": "(Twitter Developersで作成したAppのAPIシークレットキー)",
     "AccessToken": "(Twitter Developersで作成したAppのアクセストークン)",
     "AccessTokenSecret": "(Twitter Developersで作成したAppのアクセストークンシークレット)"
-  }
+  },
+  "CountPerQuery": 200,
+  "MaxQueryIterationCount": 3,
+  "DetailReportFilePath": "フハレポート (詳細).txt",
+  "ReportForTweetFilePath": "フハレポート (ツイート用).txt"
 }
