--- a/EarliestFuhaRanking/EarliestFuhaRanking.csproj
+++ b/EarliestFuhaRanking/EarliestFuhaRanking.csproj
@@ -10,6 +10,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryUrl>https://github.com/TanaUmbreon/EarliestFuhaRanking</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -43,5 +45,7 @@
   </ItemGroup>
 
   <Import Project="..\Common\Common.projitems" Label="Shared" />
+
+  <ProjectExtensions><VisualStudio><UserProperties config_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
