出力先の名前が間違っていたので修正。

--- a/TodaysFuhaRanking/NLog.config
+++ b/TodaysFuhaRanking/NLog.config
@@ -17,7 +17,7 @@
             layout="[${level:padding=-5}]${message}" />
   </targets>
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="LogFile" />
-    <logger name="*" minlevel="Info" writeTo="LogConsole" />
+    <logger name="*" minlevel="Debug" writeTo="File" />
+    <logger name="*" minlevel="Info" writeTo="Console" />
   </rules>
 </nlog>
